Add juputer notebook with model

--- a/Data_Challenge_Simon_n_Schuster.ipynb
+++ b/Data_Challenge_Simon_n_Schuster.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data_Challenge_Simon_n_Schuster"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 257,
    "metadata": {},
@@ -576,12 +583,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#missingno.heatmap(df_m1[missingdata_df]) "
+    "### Replacing Missing Data"
    ]
   },
   {
@@ -1545,6 +1550,21 @@
     "In the summary the AIC value is found to be 15790 for p=3,d=1,q=3. As AIC for model with p=2,d=1,q=2 is small we will select \n",
     "the model p=2, d=1, q=2."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "In the same way I can built model for other time series that I have found."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
